[package]
name = "nakama"
version = "0.0.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/attackgoat/nakama"
homepage = "https://github.com/attackgoat/nakama"
documentation = "https://docs.rs/nakama"
description = "Rust library for multiplayer game servers using Nakama"

[dependencies]
